[workspace]
members = [
    'node',
#    'node/bench',
    'node/executor',
    'node/inspect',
    'node/rpc',
    'node/testing',
    'pallets/im-online',
    'primitives',
    'runtime',
]
exclude = [
    'contracts/market',
    'contracts/nft',
    'contracts/SolarFT',
    'contracts/SolarNFTMarket',
    'contracts/kuggamax'
]
[profile.release]
panic = 'unwind'
