[package]
name = "solar-node"
version = "0.1.7"
authors = ["netwarps Technologies <admin@netwarps.com>"]
description = "Substrate node configured for smart contracts via `pallet-contracts`."
edition = "2021"
license = "Unlicense"
homepage = "https://github.com/netwarps/solar-node"
repository = "https://github.com/netwarps/solar-node"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "solar-node"
path = "src/main.rs"

[dependencies]
bs58 = "0.4.0"
clap = { version = "3.1.18", features = ["derive"] }
serde_json = "1.0"

sc-cli = { git = "https://github.com/paritytech/substrate",version = "0.10.0-dev",branch = "polkadot-v0.9.23",  package = "sc-cli", features = ["wasmtime"] }
sp-core = { git = "https://github.com/paritytech/substrate",version = "6.0.0",branch = "polkadot-v0.9.23",  package = "sp-core" }
sc-executor = { git = "https://github.com/paritytech/substrate",version = "0.10.0-dev",branch = "polkadot-v0.9.23",  package = "sc-executor", features = ["wasmtime"] }
sc-service = { git = "https://github.com/paritytech/substrate",version = "0.10.0-dev",branch = "polkadot-v0.9.23",  package = "sc-service", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "sc-telemetry" }
sc-keystore = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "sc-keystore" }
sp-inherents = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "sp-inherents" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "sc-transaction-pool" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "sc-transaction-pool-api" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate",version = "0.10.0-dev",branch = "polkadot-v0.9.23",  package = "sc-consensus-aura" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate",version = "0.10.0-dev",branch = "polkadot-v0.9.23",  package = "sp-consensus-aura" }
sp-consensus = { git = "https://github.com/paritytech/substrate",version = "0.10.0-dev",branch = "polkadot-v0.9.23",  package = "sp-consensus" }
sc-consensus = { git = "https://github.com/paritytech/substrate",version = "0.10.0-dev",branch = "polkadot-v0.9.23",  package = "sc-consensus" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate",version = "0.10.0-dev",branch = "polkadot-v0.9.23",  package = "sc-finality-grandpa" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "sp-finality-grandpa" }
sc-client-api = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "sc-client-api" }
sp-runtime = { git = "https://github.com/paritytech/substrate",version = "6.0.0",branch = "polkadot-v0.9.23",  package = "sp-runtime" }
sp-timestamp = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "sp-timestamp" }
sp-keyring = { git = "https://github.com/paritytech/substrate",version = "6.0.0",branch = "polkadot-v0.9.23", package = "sp-keyring" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "pallet-transaction-payment" }

# These dependencies are used for the node's RPCs
jsonrpsee = { version = "0.13.0", features = ["server"] }
sc-rpc = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "sc-rpc" }
sp-api = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "sp-api" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate",version = "0.10.0-dev",branch = "polkadot-v0.9.23",  package = "sc-rpc-api" }
sp-blockchain = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "sp-blockchain" }
sp-block-builder = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "sp-block-builder" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate",version = "0.10.0-dev",branch = "polkadot-v0.9.23",  package = "sc-basic-authorship" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "substrate-frame-rpc-system" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "pallet-transaction-payment-rpc" }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "pallet-contracts-rpc" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "frame-benchmarking" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "frame-benchmarking-cli" }

solar-node-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate",version = "3.0.0",branch = "polkadot-v0.9.23",  package = "substrate-build-script-utils" }

[features]
default = []
runtime-benchmarks = [
	"solar-node-runtime/runtime-benchmarks",
]
