[package]
name = "solar-node-runtime"
version = "0.1.7"
authors = ["netwarps Technologies <admin@netwarps.com>"]
edition = "2021"
license = "Unlicense"
homepage = "https://github.com/netwarps/solar-node"
repository = "https://github.com/netwarps/solar-node"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"] }
scale-info={default-features = false,features = ['derive'],version = '2.1.2'}

pallet-aura = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "pallet-aura", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "pallet-balances", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "pallet-grandpa", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev",branch = "polkadot-v0.9.23",package = "pallet-authorship", default-features = false }

pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "pallet-randomness-collective-flip", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "pallet-sudo", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "pallet-timestamp", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "pallet-utility", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "pallet-transaction-payment", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "sp-api", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "sp-block-builder", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", version = '0.10.0-dev',branch = "polkadot-v0.9.23", package = "sp-consensus-aura", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate",version = "6.0.0",branch = "polkadot-v0.9.23", package = "sp-core", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "sp-inherents", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "sp-offchain", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate",version = "6.0.0",branch = "polkadot-v0.9.23", package = "sp-runtime", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "sp-session", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "sp-std", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "sp-transaction-pool", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate",version = "5.0.0",branch = "polkadot-v0.9.23", package = "sp-version", default-features = false }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "frame-system-rpc-runtime-api", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "pallet-transaction-payment-rpc-runtime-api", default-features = false }

# frame
frame-support = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23",  package = "frame-support", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "frame-executive", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "frame-system", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/substrate",version = "0.10.0-dev",branch = "polkadot-v0.9.23", package = "frame-try-runtime", default-features = false, optional = true }

# Used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", default-features = false, package = "frame-benchmarking", optional = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", default-features = false, package = "frame-system-benchmarking", optional = true }
hex-literal = { version = "0.3.1", optional = true }

# Contracts specific packages
pallet-contracts = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "pallet-contracts", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate",version = "6.0.0",branch = "polkadot-v0.9.23", package = "pallet-contracts-primitives", default-features = false }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "pallet-contracts-rpc-runtime-api", default-features = false }

# scheduler
pallet-scheduler = { git = "https://github.com/paritytech/substrate",version = "4.0.0-dev",branch = "polkadot-v0.9.23", package = "pallet-scheduler",default-features = false }

# permissioned-network 
pallet-node-authorization = { git = "https://github.com/paritytech/substrate.git", version = "4.0.0-dev", branch = "polkadot-v0.9.23",  default-features = false }


[build-dependencies]
substrate-wasm-builder =  { git = "https://github.com/paritytech/substrate",version = "5.0.0-dev", package = "substrate-wasm-builder" }

[features]
default = [
	"std",
	# temporarily enable unstable contracts features by default, remove this before using on a production chain.
	"contracts-unstable-interface",
]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-authorship/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-scheduler/std",
	'pallet-node-authorization/std',
]

runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
]

# Make contract callable functions marked as __unstable__ available. Do not enable
# on live chains as those are subject to change. 
contracts-unstable-interface = [
	"pallet-contracts/unstable-interface"
]
